--- a/app.json
+++ b/app.json
@@ -25,9 +25,7 @@
         "backgroundColor": "#FFFFFF"
       },
       "permissions": [
-        "ACCESS_BACKGROUND_LOCATION",
-        "ACCESS_COARSE_LOCATION",
-        "ACCESS_FINE_LOCATION"
+        "ACCESS_BACKGROUND_LOCATION"
         ]
     },
     "web": {
