--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "react-native-weather",
-    "slug": "react-native-weather",
+    "name": "weather-app",
+    "slug": "weather-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -26,11 +26,11 @@
       },
       "permissions": [
         "ACCESS_BACKGROUND_LOCATION"
-        ]
+      ],
+      "package": "com.blackneko.weatherapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     }
-
   }
 }
